--- a/public/src/input.css
+++ b/public/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .gradient-bg {
-  background: rgb(238, 242, 255);
+  background: #eef2ff;
   background: linear-gradient(
     45deg,
     rgba(238, 242, 255, 1) 39%,
