--- a/public/src/style.css
+++ b/public/src/style.css
@@ -896,14 +896,6 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(74 114 255 / var(--tw-bg-opacity));
 }
 
-.bayangan {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  --tw-shadow-color: #dae0f7;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .sr-only {
   position: absolute;
   width: 1px;
@@ -1346,6 +1338,10 @@ input[type="range"]::-ms-fill-lower {
   border-radius: 0.5rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1356,10 +1352,6 @@ input[type="range"]::-ms-fill-lower {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-tl-3xl {
@@ -1422,6 +1414,11 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgba(12, 27, 77, 1);
 }
 
+.bg-Theme {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#4A72FF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(74 114 255 / var(--tw-bg-opacity));
@@ -1467,7 +1464,7 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(233 238 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#ebefff\] {
+.bg-primarySponsor {
   --tw-bg-opacity: 1;
   background-color: rgb(235 239 255 / var(--tw-bg-opacity));
 }
@@ -1478,6 +1475,10 @@ input[type="range"]::-ms-fill-lower {
 
 .bg-footer {
   background-color: rgba(74, 114, 255, 0.05);
+}
+
+.bg-dark {
+  background-color: rgba(12, 27, 77, 1);
 }
 
 .p-4 {
@@ -1591,10 +1592,6 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 6.25rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pb-\[6\.25rem\] {
   padding-bottom: 6.25rem;
 }
@@ -1647,10 +1644,6 @@ input[type="range"]::-ms-fill-lower {
   font-size: 34px;
 }
 
-.text-\[8px\] {
-  font-size: 8px;
-}
-
 .text-\[28px\] {
   font-size: 28px;
 }
@@ -1669,10 +1662,6 @@ input[type="range"]::-ms-fill-lower {
 
 .font-normal {
   font-weight: 400;
-}
-
-.font-black {
-  font-weight: 900;
 }
 
 .leading-\[44px\] {
@@ -1740,11 +1729,6 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-\[\#0c1b4d\] {
-  --tw-text-opacity: 1;
-  color: rgb(12 27 77 / var(--tw-text-opacity));
-}
-
 .text-accordion {
   color: rgba(12, 27, 77, 0.6);
 }
@@ -1772,6 +1756,12 @@ input[type="range"]::-ms-fill-lower {
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1842,7 +1832,7 @@ input[type="range"]::-ms-fill-lower {
 }
 
 .gradient-bg {
-  background: rgb(238, 242, 255);
+  background: #eef2ff;
   background: linear-gradient(
     45deg,
     rgba(238, 242, 255, 1) 39%,
@@ -2064,6 +2054,10 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.dark .dark\:border-0 {
+  border-width: 0px;
+}
+
 .dark .dark\:border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
@@ -2077,6 +2071,21 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.dark .dark\:border-slate-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+
+.dark .dark\:border-slate-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(51 65 85 / var(--tw-border-opacity));
+}
+
+.dark .dark\:border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-slate-800 {
@@ -2109,9 +2118,12 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-blue-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 245 255 / var(--tw-bg-opacity));
+.dark .dark\:bg-btnDark {
+  background-color: rgba(51, 65, 85, 0.3);
+}
+
+.dark .dark\:bg-transparent {
+  background-color: transparent;
 }
 
 .dark .dark\:bg-slate-700 {
@@ -2119,8 +2131,21 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-darkFooter {
+  background-color: rgba(30, 41, 59, .3);
+}
+
+.dark .dark\:bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:fill-dark {
   fill: rgba(12, 27, 77, 1);
+}
+
+.dark .dark\:fill-primary2 {
+  fill: #e9eeff;
 }
 
 .dark .dark\:text-white {
@@ -2162,14 +2187,40 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
 
+.dark .dark\:opacity-90 {
+  opacity: 0.9;
+}
+
 .dark .dark\:shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.dark .dark\:shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark .dark\:shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .dark .dark\:shadow-slate-200 {
   --tw-shadow-color: #e2e8f0;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.dark .dark\:open\:bg-slate-700[open] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:open\:shadow-slate-700[open] {
+  --tw-shadow-color: #334155;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -2183,9 +2234,9 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:hover\:bg-blue-100:hover {
+.dark .dark\:hover\:bg-slate-800:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(225 239 254 / var(--tw-bg-opacity));
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-slate-100:hover {
@@ -2198,9 +2249,48 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
+.dark .dark\:hover\:opacity-40:hover {
+  opacity: 0.4;
+}
+
 .dark .dark\:focus\:ring-blue-800:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(30 66 159 / var(--tw-ring-opacity));
+}
+
+.dark .group[open] .dark\:group-open\:border-slate-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(71 85 105 / var(--tw-border-opacity));
+}
+
+.dark .group[open] .dark\:group-open\:border-slate-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-border-opacity));
+}
+
+.dark .group[open] .dark\:group-open\:text-primary2 {
+  --tw-text-opacity: 1;
+  color: rgb(233 238 255 / var(--tw-text-opacity));
+}
+
+.dark .group:hover .dark\:group-hover\:fill-primary2hover {
+  fill: #dae0f7;
+}
+
+.dark .group:hover .dark\:group-hover\:fill-slate-800 {
+  fill: #1e293b;
+}
+
+.dark .group:hover .dark\:group-hover\:fill-slate-500 {
+  fill: #64748b;
+}
+
+.dark .group:hover .dark\:group-hover\:fill-slate-300 {
+  fill: #cbd5e1;
+}
+
+.dark .group:hover .dark\:group-hover\:fill-slate-400 {
+  fill: #94a3b8;
 }
 
 @media (min-width: 640px) {
@@ -2341,6 +2431,10 @@ input[type="range"]::-ms-fill-lower {
     display: flex;
   }
 
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:h-\[9\.688rem\] {
     height: 9.688rem;
   }
@@ -2432,6 +2526,26 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:after\:top-10::after {
+    content: var(--tw-content);
+    top: 2.5rem;
+  }
+
+  .lg\:after\:top-3::after {
+    content: var(--tw-content);
+    top: 0.75rem;
+  }
+
+  .lg\:after\:top-2::after {
+    content: var(--tw-content);
+    top: 0.5rem;
+  }
+
+  .lg\:after\:top-\[10px\]::after {
+    content: var(--tw-content);
+    top: 10px;
   }
 
   .group[open] .lg\:group-open\:pt-8 {
