--- a/public/src/input.css
+++ b/public/src/input.css
@@ -11,11 +11,6 @@
     rgba(238, 242, 255, 1) 100%
   );
 }
-/* @layer components {
-  * {
-    @apply font-display;
-  }
-} */
 @layer components {
   .container {
     @apply max-w-5xl mx-auto py-8;
@@ -41,16 +36,8 @@
     @apply shadow-lg shadow-primary2hover;
   }
 }
-/* @layer components {
-  .bayangan {
-    @apply shadow-lg shadow-slate-800;
+@layer utilities {
+  .hidden-me {
+    content-visibility: hidden;
   }
-} */
-
-/* .card-bg {
-  background: rgba(12, 27, 77, 0.1);
-  box-shadow: 0 8px px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
-} */
+}
