--- a/public/src/style.css
+++ b/public/src/style.css
@@ -1477,10 +1477,6 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgba(74, 114, 255, 0.05);
 }
 
-.bg-dark {
-  background-color: rgba(12, 27, 77, 1);
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -1572,10 +1568,6 @@ input[type="range"]::-ms-fill-lower {
   padding-right: 1rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .pl-\[2\.5rem\] {
   padding-left: 2.5rem;
 }
@@ -1606,6 +1598,14 @@ input[type="range"]::-ms-fill-lower {
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .text-center {
@@ -1831,6 +1831,10 @@ input[type="range"]::-ms-fill-lower {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.hidden-me {
+  content-visibility: hidden;
+}
+
 .gradient-bg {
   background: #eef2ff;
   background: linear-gradient(
@@ -1840,26 +1844,6 @@ input[type="range"]::-ms-fill-lower {
     rgba(238, 242, 255, 1) 100%
   );
 }
-
-/* @layer components {
-  * {
-    @apply font-display;
-  }
-} */
-
-/* @layer components {
-  .bayangan {
-    @apply shadow-lg shadow-slate-800;
-  }
-} */
-
-/* .card-bg {
-  background: rgba(12, 27, 77, 0.1);
-  box-shadow: 0 8px px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
-} */
 
 .after\:absolute::after {
   content: var(--tw-content);
@@ -2131,15 +2115,6 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-darkFooter {
-  background-color: rgba(30, 41, 59, .3);
-}
-
-.dark .dark\:bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:fill-dark {
   fill: rgba(12, 27, 77, 1);
 }
@@ -2200,12 +2175,6 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.dark .dark\:shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2271,22 +2240,6 @@ input[type="range"]::-ms-fill-lower {
 .dark .group[open] .dark\:group-open\:text-primary2 {
   --tw-text-opacity: 1;
   color: rgb(233 238 255 / var(--tw-text-opacity));
-}
-
-.dark .group:hover .dark\:group-hover\:fill-primary2hover {
-  fill: #dae0f7;
-}
-
-.dark .group:hover .dark\:group-hover\:fill-slate-800 {
-  fill: #1e293b;
-}
-
-.dark .group:hover .dark\:group-hover\:fill-slate-500 {
-  fill: #64748b;
-}
-
-.dark .group:hover .dark\:group-hover\:fill-slate-300 {
-  fill: #cbd5e1;
 }
 
 .dark .group:hover .dark\:group-hover\:fill-slate-400 {
@@ -2526,26 +2479,6 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:text-left {
     text-align: left;
-  }
-
-  .lg\:after\:top-10::after {
-    content: var(--tw-content);
-    top: 2.5rem;
-  }
-
-  .lg\:after\:top-3::after {
-    content: var(--tw-content);
-    top: 0.75rem;
-  }
-
-  .lg\:after\:top-2::after {
-    content: var(--tw-content);
-    top: 0.5rem;
-  }
-
-  .lg\:after\:top-\[10px\]::after {
-    content: var(--tw-content);
-    top: 10px;
   }
 
   .group[open] .lg\:group-open\:pt-8 {
