--- a/public/src/style.css
+++ b/public/src/style.css
@@ -918,6 +918,10 @@ input[type="range"]::-ms-fill-lower {
   pointer-events: none;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -982,6 +986,10 @@ input[type="range"]::-ms-fill-lower {
 
 .order-5 {
   order: 5;
+}
+
+.order-3 {
+  order: 3;
 }
 
 .mx-auto {
@@ -1111,8 +1119,24 @@ input[type="range"]::-ms-fill-lower {
   height: 1rem;
 }
 
+.h-\[70rem\] {
+  height: 70rem;
+}
+
 .h-0 {
   height: 0px;
+}
+
+.h-\[10px\] {
+  height: 10px;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
+.h-\[5px\] {
+  height: 5px;
 }
 
 .w-32 {
@@ -1244,8 +1268,32 @@ input[type="range"]::-ms-fill-lower {
   scroll-margin-top: 9rem;
 }
 
+.-scroll-mt-48 {
+  scroll-margin-top: -12rem;
+}
+
 .scroll-mt-32 {
   scroll-margin-top: 8rem;
+}
+
+.-scroll-mt-36 {
+  scroll-margin-top: -9rem;
+}
+
+.-scroll-mt-56 {
+  scroll-margin-top: -14rem;
+}
+
+.-scroll-mt-60 {
+  scroll-margin-top: -15rem;
+}
+
+.-scroll-mt-72 {
+  scroll-margin-top: -18rem;
+}
+
+.-scroll-mt-96 {
+  scroll-margin-top: -24rem;
 }
 
 .list-none {
@@ -1366,6 +1414,10 @@ input[type="range"]::-ms-fill-lower {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-\[20px\] {
+  border-radius: 20px;
 }
 
 .rounded-tl-3xl {
@@ -1491,6 +1543,21 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgba(74, 114, 255, 0.05);
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
+}
+
 .fill-primary {
   fill: #4A72FF;
 }
@@ -1578,6 +1645,21 @@ input[type="range"]::-ms-fill-lower {
   padding-bottom: 0.75rem;
 }
 
+.py-\[100px\] {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.px-\[80px\] {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1592,10 +1674,6 @@ input[type="range"]::-ms-fill-lower {
 
 .pr-8 {
   padding-right: 2rem;
-}
-
-.pr-12 {
-  padding-right: 3rem;
 }
 
 .pt-\[6\.25rem\] {
@@ -1618,16 +1696,16 @@ input[type="range"]::-ms-fill-lower {
   padding-top: 2.5rem;
 }
 
+.pt-32 {
+  padding-top: 8rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-32 {
-  padding-top: 8rem;
 }
 
 .text-center {
@@ -1696,6 +1774,10 @@ input[type="range"]::-ms-fill-lower {
 
 .leading-\[42px\] {
   line-height: 42px;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
 }
 
 .tracking-widest {
@@ -1781,6 +1863,12 @@ input[type="range"]::-ms-fill-lower {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1799,6 +1887,11 @@ input[type="range"]::-ms-fill-lower {
 
 .shadow-slate-300 {
   --tw-shadow-color: #cbd5e1;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-donwlod {
+  --tw-shadow-color: rgba(74, 114, 255, 0.25);
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -1970,9 +2063,24 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(218 224 247 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-slate-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 114 255 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.hover\:text-primary2:hover {
+  --tw-text-opacity: 1;
+  color: rgb(233 238 255 / var(--tw-text-opacity));
 }
 
 .focus\:border-\[\#4A72FF\]:focus {
@@ -2078,6 +2186,11 @@ input[type="range"]::-ms-fill-lower {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
+.dark .dark\:border-slate-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(71 85 105 / var(--tw-border-opacity));
+}
+
 .dark .dark\:border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
@@ -2096,21 +2209,6 @@ input[type="range"]::-ms-fill-lower {
 .dark .dark\:border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.dark .dark\:border-slate-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(241 245 249 / var(--tw-border-opacity));
-}
-
-.dark .dark\:border-slate-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-slate-800 {
@@ -2143,6 +2241,11 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(233 238 255 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -2154,21 +2257,6 @@ input[type="range"]::-ms-fill-lower {
 
 .dark .dark\:bg-transparent {
   background-color: transparent;
-}
-
-.dark .dark\:bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:fill-primary2 {
@@ -2208,6 +2296,16 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(233 238 255 / var(--tw-text-opacity));
 }
 
+.dark .dark\:text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(12 27 77 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-slate-900 {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
 .dark .dark\:placeholder-gray-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
@@ -2239,6 +2337,11 @@ input[type="range"]::-ms-fill-lower {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.dark .dark\:shadow-slate-700 {
+  --tw-shadow-color: #334155;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .dark .dark\:open\:bg-slate-700[open] {
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
@@ -2259,14 +2362,14 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:hover\:bg-slate-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:hover\:bg-slate-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-slate-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-slate-100:hover {
@@ -2470,6 +2573,18 @@ input[type="range"]::-ms-fill-lower {
     height: 20rem;
   }
 
+  .lg\:h-\[40rem\] {
+    height: 40rem;
+  }
+
+  .lg\:h-\[538px\] {
+    height: 538px;
+  }
+
+  .lg\:h-\[46px\] {
+    height: 46px;
+  }
+
   .lg\:w-\[98\%\] {
     width: 98%;
   }
@@ -2490,8 +2605,16 @@ input[type="range"]::-ms-fill-lower {
     width: 27rem;
   }
 
+  .lg\:w-\[315px\] {
+    width: 315px;
+  }
+
   .lg\:max-w-lg {
     max-width: 32rem;
+  }
+
+  .lg\:scroll-mt-28 {
+    scroll-margin-top: 7rem;
   }
 
   .lg\:flex-row {
@@ -2518,6 +2641,10 @@ input[type="range"]::-ms-fill-lower {
     gap: 0.5rem;
   }
 
+  .lg\:rounded-none {
+    border-radius: 0px;
+  }
+
   .lg\:p-8 {
     padding: 2rem;
   }
@@ -2526,9 +2653,18 @@ input[type="range"]::-ms-fill-lower {
     padding: 3.75rem;
   }
 
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .lg\:px-64 {
     padding-left: 16rem;
     padding-right: 16rem;
+  }
+
+  .lg\:pr-12 {
+    padding-right: 3rem;
   }
 
   .lg\:pl-0 {
@@ -2555,16 +2691,13 @@ input[type="range"]::-ms-fill-lower {
     background-color: transparent;
   }
 
-  .dark .lg\:dark\:hover\:bg-slate-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-  }
-
-  .dark .lg\:dark\:hover\:bg-transparent:hover {
-    background-color: transparent;
-  }
-
   .dark .dark\:lg\:hover\:bg-transparent:hover {
     background-color: transparent;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:w-\[1024px\] {
+    width: 1024px;
   }
 }
